# ShowerMC

./: .gitignore  CMakeLists.txt  README.md
Application/Example/FirstKiss/: .xlog  CMakeLists.txt  chook.f  param  primary
Application/Example/MPI/: CMakeLists.txt  chook.f  chookHybAS.f  param  primary
LibLoft1.00/: CMakeLists.txt  Makefile
LibLoft1.00/Data/: BaseM  BaseM3  BaseMReadme  Cutoff  DPM  DPM-epi  EPOS  Elsepa  Fragment  GLBupToFe  GLBupToPb  Geomag  MCS  MCS-cos  MCS2  Media  Media1  Media2  Media3  MediaNelson  MediaTsai  Namelist  Primary  Primary-epi  QGS  Rock  mkLink.sh
LibLoft1.00/DataFromCos/: .contForMulat  .contInfo  .contInfoDai  .contInfoKaken  .contInfodebug  .contInfogamma
LibLoft1.00/DataFromCos/Cutoff/: earth
LibLoft1.00/DataFromCos/DPM/: Readme  atmos.GLB  atmos.inp  atmos0.5to1e12.inp  atmos0.5to1e8.inp
LibLoft1.00/DataFromCos/Fragment/: H-1-119.parm  H-1-131.parm  H-1-156.parm  H-1-184.parm  H-1-207.parm  H-1-56.parm  H-1-64.parm  H-1-91.parm  H-11-119.parm  H-11-131.parm  H-11-156.parm  H-11-184.parm  H-11-207.parm  H-11-56.parm  H-11-64.parm  H-11-91.parm  H-12-119.parm  H-12-131.parm  H-12-156.parm  H-12-184.parm  H-12-207.parm  H-12-56.parm  H-12-64.parm  H-12-91.parm  H-16-119.parm  H-16-131.parm  H-16-156.parm  H-16-184.parm  H-16-207.parm  H-16-56.parm  H-16-64.parm  H-16-91.parm  H-20-119.parm  H-20-131.parm  H-20-156.parm  H-20-184.parm  H-20-207.parm  H-20-56.parm  H-20-64.parm  H-20-91.parm  (+105 more)
LibLoft1.00/DataFromCos/Geomag/: dipole  dipole+  geomag1990  igrf  igrfOld  testdata  wmm  wmm2005
LibLoft1.00/DataFromCos/Namelist/: Bapp  Bets  Dai  HD  ParamDefault  ParamDefault.IBM  ParamDefault.Orig  botheff  botheffProton  debug  debug2  hobby  lpmeff  lpmeffProton  mageff  mageffatHA  noeffect  noeffectProton  paramSample  paramSample.IBM  skelton  test  test2
LibLoft1.00/DataFromCos/Primary/: BESS+e+e-  BESS_rawData  Bapp  Carbon  Dai  HD  HondaPrim  Oxigen  Readme  debug  delta.d  e+e-.d  formu  gamma  loop  muon0deg  muon75deg  p-n-1ry.d  pHeByBessPlusCNO  pHeCNO100  pHeCNOBess  pHeCNOYang  primSample  primary_symb_table.d  sample.d  sync  test  test.d
LibLoft1.00/DataFromCos/QGS/: sectnu-II-1  sigxAbysigxp
LibLoft1.00/DataFromCos/Rock/: $MACRO  FREJUS  KGF  MACRO
LibLoft1.00/DataFromEpi/: BaseMReadme  Media
LibLoft1.00/DataFromEpi/BaseM/: Acetate  Acrylic  Air  Al  Al2024  Al7075  Argas  Au  BGO  Bakelite  Be  Brass  CFRP  CH4  Carbon  CdTe  CsI  Cu  D2  Diamond  Fe  G5  GSO  GSObar  Gten  H2  H2O  Hegas  LaBr  LiqH2  LiqO2  LiqXe  Marble  NaI  Ni  PVC  PWO  PWOpdg  Pb  SCIN  (+21 more)
LibLoft1.00/DataFromEpi/BaseM3/: Air  Air1  Air10  Air100  Air11  Air12  Air13  Air14  Air15  Air16  Air17  Air18  Air19  Air2  Air20  Air21  Air22  Air23  Air24  Air25  Air26  Air27  Air28  Air29  Air3  Air30  Air31  Air32  Air33  Air34  Air35  Air36  Air37  Air38  Air39  Air4  Air40  Air41  Air42  Air43  (+61 more)
LibLoft1.00/DataFromEpi/DPM/: Readme  Template.inp  Template1.inp  Template2.inp
LibLoft1.00/DataFromEpi/GLBupToFe/: Acrylic.GLB  Acrylic.inp  Air.GLB  Air.inp  Al.GLB  Al.inp  Argas.GLB  Argas.inp  Au.GLB  Au.inp  BGO.GLB  BGO.inp  BGO2.inp  BaF.GLB  BaF.inp  Bakelite.GLB  Bakelite.inp  Be.GLB  Be.inp  CFRP.GLB  CFRP.inp  CH4.GLB  CH4.inp  Carbon.GLB  CdTe.GLB  CdTe.inp  CsI.GLB  CsI.inp  Cu.GLB  Cu.inp  D2.inp  DUM.inp  Diamond.inp  Fe.GLB  Fe.inp  G5.GLB  G5.inp  GSO.GLB  GSO.inp  GSObar.GLB  (+56 more)
LibLoft1.00/DataFromEpi/GLBupToPb/: Acrylic.inp  Air.inp  Al.GLB  Al2024.GLB  Al2024.inp  Al7075.GLB  Al7075.inp  Be.GLB  Be.inp  CFRP.inp  CH4.GLB  CdTe.inp  CsI.GLB  CsI.inp  Diamond.inp  GSO.GLB  Gten.GLB  H2O.inp  LaBr.GLB  LiqXe.inp  Marble.inp  Ni.GLB  Ni.inp  Pb.GLB  Pb.inp  SciFi.GLB  Ta.inp  W.inp  glass.GLB  ice.GLB  oAcrylic.GLB  oAcrylic.inp
LibLoft1.00/DataFromEpi/Media1/: Acetate  Acetate.xcom  Acrylic.xcom  Air  Air.GLB  Air.xcom  Al  Al.xcom  Al2024.GLB  Al2024.inp  Al2024.xcom  Al7075.GLB  Al7075.inp  Al7075.xcom  Argas.GLB  Argas.inp  Argas.xcom  Au.GLB  Au.inp  Au.xcom  BGO.inp  BGO.xcom  Bakelite.GLB  Bakelite.inp  Bakelite.xcom  Be  Be.xcom  Brass  Brass.inp  (+91 more)
LibLoft1.00/Decay/: CMakeLists.txt  Makefile  cDeltaDecay.f  cDsDecay.f  cbomegaDcy.f  cdDecay.f  cdDecay.fOld  cetaDecay.f  cetapDecay.f  cgzaiDecay.f  ckaonDecay.f  clambdaDcy.f  clambdacDcy.f  cmuNeuDcy.f  cpCos2pxyz.f  cpi0Decay.f  cpiMuDecay.f  csigmaDecay.f  ctauNeuDcy.f  cvmDecay.f
LibLoft1.00/EM/: ReadmeCeren
LibLoft1.00/General/: Makefile
LibLoft1.00/Header/: ZbasicCnst.h  ZbpPE.h  ZbpSample.h  ZbpTbl.h  ZcheckPHITS.h  Zcinippxc.h  Zcmuint.h  Zcode.h  Zcondc.h  Zcoord.h  ZcosmosBD.hNotUsed  Zdirec.h  Zelemagp.h  Zelement.h  Zep3Vec.h  ZepDirec.h  ZepManager.h  ZepMaxdef.h  ZepPos.h  ZepTrackp.h  Zevhnp.h  Zevhnv.h  Zglobalc.h  Zheavyc.h  Zheavyp.h  Zheavyv.h  ZincForNameL.h  Zincidentp.h  Zincidentv.h  Zkcele.h  Zkfcode.h  Zlife.h  Zmagfield.h  Zmagfieldtp.h  Zmanager.h  Zmanagerp.h  Zmanagerp90.h  Zmass.h  Zmass90.h  Zmaxdef.h  (+42 more)
LibLoft1.00/Manager/: Makefile  c2lowerCase.f  cCodeConv.f  cepControl.f  cerrorMsg.f  cgetLoginN.f  ckf2cos.f  cmkSeed.f  copenf.f  creadParam.f  cskipComment.f  cwriteParam.f  cwriteSeed.f
LibLoft1.00/Module/: Makefile  MixedMCS  cCodeConv.f  cHowMCS.f90  cNucMass.f90  cTargetFrag.f90  cepControl.f  csampAF.f90  epSmpBremAng2BN.f90  epSmpBremAngRelF.f90  epSmpBremAngTsai.f90  epSrim.f90  epprocAlias.f  kggamma.f90
LibLoft1.00/Mu/: Makefile  cmuInte.f
LibLoft1.00/PreInte/: Makefile  cdecayLeng.f  cepSampEIntL.f  cepSampGIntL.f  cepSampNEPIntL.f  cseeColPossible.f  epprocAlias.f  eprdMFile.f
LibLoft1.00/Primary/: Makefile  Readme  ciniSPrim.f  cmkPrimSTbl.f  cprintPrim.f  cprocPrimDt.f  crdPrimData.f  crigCut.f  csampPrimary.f
LibLoft1.00/Scrpt/: ar-d-epos.sh  ar-d-sibyll.sh  cppFCLinuxGfort  cppFCMacGfort  cppFCMacIFC  cppFCPCLinuxIFC64  fixEPOS.sh  fixQGSII.sh  fixSibyll.sh  intModel.sh  libenv.sh  setarch.sh  sevi.sh  showAllDotMod.sh
LibLoft1.00/Site/: site.configLinuxGfort  site.configMacGfort  site.configMacIFC  site.configPCLinuxIFC64
LibLoft1.00/Special/: Readme  cxsSpecial.f
LibLoft1.00/Version/: Readme
(+5251 files in other folders)
